<resources>
    <string name="app_name">Сommemoration\'s calculator</string>
    <string name="date_of_death_caption">Date of death</string>
    <string name="date_of_death_3day_caption">Сommemoration 3-day</string>
    <string name="date_of_death_9day_caption">Сommemoration 9-day</string>
    <string name="date_of_deatg_40day_caption">Сommemoration 40-day</string>
    <string name="date_of_death_6month_caption">Сommemoration 6-months</string>
    <string name="date_of_death_1year_caption">Сommemoration 1-year</string>
    <string name="change_date">Choose a date</string>
    <string name="details">Details</string>
    <string name="error">Error</string>
    <string name="choose_date">Choose date of death</string>
    <string name="three_day_description">
        <![CDATA[
     <html>
	    <body style="text-align:justify">
	        <p>
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The wake after the funeral on the third day is
         traditionally associated with the miraculous resurrection of Jesus Christ and the image
         of the Blessed Trinity. During the first two days after  the soul stays on earth near
         relatives and visits places that were dear to it when it was alive. Only on the third day
         does it ascend to heaven, where it appears before God. On that day, the family  On this day,
         a memorial table is laid for her. This takes place immediately or some time after  The
         funeral or civil funeral service and the funeral are over. The meal is held leisurely, with
         each  come and say something good about the deceased, to express their grief. The place for
         the funeral may be the home of the deceased, as well as a cafe, restaurant, banquet hall,
         specially rented for this ceremony. However, there are several rules which should be  to
         adhere to:</p>
            <ol>
			<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Anyone who wants to see the deceased off to his last journey can come to the dinner.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Before the meal, the Lord\'s Prayer is recited.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If a clergyman is present at the meal, he conducts the liturgy for the funeral and
         blesses the meal.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All those present are seated at the table in separate seats.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The first course is served with kutya, which was blessed in the temple during the
         funeral service.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Before the sweet is served, those present sing a verse for voice.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The meal concludes with the reception of the last meal and the funeral bowl, as well
         as the offering of thanksgiving.</string></li>
            </ol>
	</body>
</html>
]]></string>
    <string name="nine_day_description">
    <![CDATA[
    <html>
	    <body style="text-align:justify">
	        <p>
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nine days are counted from the day of a person\'s death.
         According to tradition on this day only family and friends come to remember the deceased.
         In a small family circle orthodox remember the best deeds of the deceased and read
         prayers. They also visit the cemetery, ennoble the grave, bring new flowers. A wake on
         the ninth day after the funeral is held in honor of  nine angelic ranks, servants of God,
         who give him requests for mercy for the deceased. The rite memorials and prayers for the
         loved one help the soul of the deceased to receive the blessing of the Almighty and go to
         Paradise. On this day, according to the Orthodox canons, it is not  is not obligatory.
         Relatives can simply gather at the grave and pray for the deceased. If it is decided it
         has been decided to lay the table, then strangers are not invited to the wake. And all
         the leftover food should be distributed to the needy and the poor.</p>
        </body>
    </html>
]]></string>
    <string name="forty_day_description"><![CDATA[
    <html>
	    <body style="text-align:justify">
	        <p>
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On the fortieth day the soul of the departed returns to the
         soul of the deceased returns to its home, only to leave it forever after twenty-four
         hours to appear before God, who will make the final decision about her fate. Between the
         9th and 40th day she is in Hell, where she watches the sufferers of sinners. According to
         the beliefs, if the soul has not found rest, it remains forever in the house, because the
         way to heaven is closed to it. To help the spirit of the deceased to rest, to relieve his
         sufferings and to make amends for his sins on this day, the Fortieth Day is arranged.
         Relatives, friends and acquaintances gather to remember the deceased, talk about him and
         his life, pray for him. But to help a near and dear person who has passed into the other
         world, one can only clearly adhere to established rules:</p>
         <ol>
			<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On this day it is necessary to order a prayer service, which is accepted to serve for the
         deceased for 40 days - a forty-day vigil. All relatives and friends should also pray for
         the soul of the deceased.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Do not turn the memorial dinner into a feast and engage in idle conversation.</li>
            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;According to Orthodox traditions, at the wake it is forbidden to drink alcohol, sing and to
         have fun. For those who want to support the soul of a loved one, clergymen recommend at
         least for one day Sacrifice oneself, giving up any bad habits, for example, gluttony,
         smoking.</li>
            </ol>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The memorial table for 40 days is laid the same way as during the wake after the funeral.
         Kutya, pancakes and compote are obligatory. You can diversify the meal and other dishes.</p>
         </body>
    </html>
]]>
    </string>
    <string name="six_month_description"><![CDATA[
    <html>
	    <body style="text-align:justify">
	        <p>
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;After a person passes away, the first six-month period is
         quite difficult for relatives. This is the time to come to terms with the loss and
         continue living, but in another way. A great comfort is given by memories of the deceased
         and frequent prayers for his soul.A wake in six months after death is not necessary in
         terms of six months after death are optional in terms of church canons. It is a gradually
         formed folk tradition. Therefore, it is up to the Orthodox to decide how to memorialize
         for six months after death.It is an arbitrary date, there are no "soul events" associated
         with it, no special ecclesiastical actions. The Orthodox Church does not forbid
         commemoration of the deceased at any time, if there is the Orthodox Church does not
         forbid to commemorate the deceased at any time, if there is a wish, even daily. If there
         is a desire and possibility, in six months it is possible to organize memorial meal or
         order a memorial service in the church. What is the best way to remember the deceased in
         half a year? Of the most important of the church commemorations is the Divine Liturgy,
         at which the Bloodless Sacrifice to God. Also on this day it is desirable to order a
         special memorial service - a memorial service. Arranging a it is necessary to remember
         that it is not a festive feast six months after death. Therefore, there is nothing bad
         and not reprehensible, if the food will be modest, without gastronomic excesses. The main
         is not the dishes on the table, but the memory of the deceased. The Church encourages not
         to commemorate with alcohol, so as not to turn the memorial service into a binge. Wine is
         not conducive to a prayerful mood. For the memorial meal Kutya (koliv) is considered
         obligatory according to folk tradition.Half a year is not a canonical date for so the
         absence of kutya on the menu is quite acceptable. The presence of other dishes depends
         mainly on the presence of other dishes depends mainly on the time of year and whether or
         not there is a fast at that time. Local traditions also influence. It can be vegetable
         salads, noodle soup, meat and fish dishes, pancakes, kissel. The main point of a wake is
         to remember the deceased and to pray for him or her together.</p>
        </body>
    </html>
]]>
    </string>
    <string name="one_year_description"><![CDATA[
    <html>
	    <body style="text-align:justify">
	        <p>
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The first anniversary of a death is an extremely significant
         event for all relatives, relatives, and friends of the deceased. On such a date it is
         customary to gather together and share good memories of the deceased, while supporting
         each other. It is important to understand that the first 12 months are essentially
          adaptive, as people gradually get used to the idea of the of the person.
         There are no precise rules and procedures for memorial services, so it is up to the
         relatives decide how and where to celebrate the event. There are also no restrictions on
         guests, as it is possible to invite any person whom the relatives think is necessary and
         significant at the event.</p>
         <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Particular attention should be paid to the organizational arrangements. First of all, it
         is necessary to determine the place of the wake. It can be an apartment, a private house
         or a cafe or restaurant, depending on depending on the number of people invited and the
         wishes of close relatives. Often the venue for the wake of the deceased is where he
         preferred to be most often. Such a place can be a dacha, a country house, a mountain, a
         forest, a lake or a river.</p>
         <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Having met, people share pleasant moments and memories of the deceased. It should be
         noted that invite only those people with whom relatives will really enjoy to communicate.
         That is those people who really loved and respected the deceased, treated to him well,
         were friends, relatives and good colleagues.
         </p>
        </body>
    </html>
]]>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="change_theme">Change theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="auto_theme">Auto</string>
    <string name="change_language">Change language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="auto_language">Auto</string>

</resources>