<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/android:colorBackground"
            app:menu="@menu/toolbar_settings_fragment"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintWithRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_changeTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@id/card_view_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:id="@+id/constraintRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:text="@string/change_theme"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonLightTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/light_theme"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonDarkTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/dark_theme"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonAutoTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/auto_theme"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_changeTheme">

                <RadioGroup
                    android:id="@+id/constraintRadioGroupLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textViewLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:text="@string/change_language"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonRussian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/russian"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonEnglish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/english"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioButtonAutoLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="4dp"
                        android:layoutDirection="rtl"
                        android:text="@string/auto_language"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>